# Copyright 2019 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "//pw_build:pigweed.bzl",
    "pw_cc_library",
    "pw_facade_toolchain",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

config_setting(
    name = "kythe",
    values = {
        "define": "kythe_corpus=pigweed.googlesource.com/pigweed/pigweed",
    },
)

# Toolchain type used for facade backend resolution.
toolchain_type(name = "facade_toolchain_type")

pw_facade_toolchain(
    name = "default_facade_backends_toolchain",
    backends = {
        "//pw_build/compilation_tests:pw_facade_backend_alias": "//pw_build/compilation_tests:backend",
    },
)

# This target is used as a catch all backend, and can be used to ensure that
# Bazel skips building targets that don't have a matching backend.
pw_cc_library(
    name = "unimplemented_backend",
    target_compatible_with = ["@platforms//:incompatible"],
)
