# Copyright 2021 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "//pw_build:pigweed.bzl",
    "pw_cc_library",
    "pw_cc_test",
)
load("//pw_protobuf_compiler:proto.bzl", "pw_proto_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

proto_library(
    name = "update_bundle_proto",
    srcs = [
        "tuf.proto",
        "update_bundle.proto",
    ],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

pw_proto_library(
    name = "update_bundle_proto_cc",
    deps = ["update_bundle_proto"],
)

pw_cc_library(
    name = "update_bundle",
    srcs = [
        "manifest_accessor.cc",
        "update_bundle_accessor.cc",
    ],
    hdrs = [
        "public/pw_software_update/bundled_update_backend.h",
        "public/pw_software_update/config.h",
        "public/pw_software_update/manifest_accessor.h",
        "public/pw_software_update/update_bundle_accessor.h",
    ],
    copts = ["-Wno-macro-redefined"],
    includes = ["public"],
    deps = [
        ":update_bundle_proto_cc.pwpb",
        "//pw_blob_store",
        "//pw_crypto:ecdsa",
        "//pw_crypto:sha256",
        "//pw_kvs",
        "//pw_log",
        "//pw_protobuf",
        "//pw_status",
        "//pw_stream",
    ],
)

pw_cc_library(
    name = "bundled_update_service",
    srcs = ["bundled_update_service.cc"],
    hdrs = ["public/pw_software_update/bundled_update_service.h"],
    includes = ["public"],
    deps = [
        ":update_bundle",
        ":update_bundle_proto_cc.pwpb",
        "//pw_log",
        "//pw_result",
        "//pw_status",
        "//pw_sync:borrow",
        "//pw_sync:lock_annotations",
        "//pw_sync:mutex",
        "//pw_tokenizer",
        "//pw_work_queue",
    ],
)

pw_cc_test(
    name = "update_bundle_test",
    srcs = ["update_bundle_test.cc"],
    deps = [
        ":update_bundle",
        "//pw_kvs:fake_flash_test_key_value_store",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "bundled_update_service_test",
    srcs = ["bundled_update_service_test.cc"],
    deps = [
        ":bundled_update_service",
        "//pw_unit_test",
    ],
)
