# Copyright 2022 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
load(
    # TODO: Change this to "//pw_build:pigweed.bzl" once toolchain facade
    # migration is complete.
    "//pw_build/bazel_internal:facade.bzl",
    "pw_cc_facade",
)
load("//pw_build:pigweed.bzl", "pw_cc_library")

pw_cc_facade(
    name = "facade",
    srcs = ["facade.cc"],
    hdrs = ["facade.h"],
    default_backend = ":backend",
    includes = ["."],
)

pw_cc_library(
    name = "backend",
    srcs = ["backend.cc"],
    hdrs = ["backend.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [":facade.facade"],
)
