# Copyright 2022 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

py_library(
    name = "pw_software_update",
    srcs = [
        "pw_software_update/__init__.py",
        "pw_software_update/dev_sign.py",
        "pw_software_update/generate_test_bundle.py",
        "pw_software_update/keys.py",
        "pw_software_update/metadata.py",
        "pw_software_update/root_metadata.py",
        "pw_software_update/update_bundle.py",
        "pw_software_update/verify.py",
    ],
    imports = ["."],
)

py_binary(
    name = "generate_test_bundle",
    srcs = ["pw_software_update/generate_test_bundle.py"],
    deps = [":pw_software_update"],
)
